tests/compile-fail/generated/derives-span-Hash-enum.stderr
error[E0277]: the trait bound `Error: std::hash::Hash` is not satisfied
  --> $DIR/derives-span-Hash-enum.rs:16:6
   |
16 |    A(Error)
   |      ^^^^^ the trait `std::hash::Hash` is not implemented for `Error`
   |
   = note: required by `std::hash::Hash::hash`
